--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,7 @@ span.glyphicon.glyphicon-search.edit {
 	transition:0.5s;
 }
 .banner{
-	background:url(../images/banner.jpg);
+	background:url(images/senior.jpeg);
 	background-size:cover;
 	min-height:650px;
 	padding-top:0em !important;
